both vid channels updated

--- a/vid_chat2.html
+++ b/vid_chat2.html
@@ -43,11 +43,9 @@
 		<video id="repl_left" autoplay loop webkit-playsinline style="display:none">
 			<source src="repl_left_nu.webm" type='video/webm;'>
 		</video>
-		<!--
 		<video id="repl_right" autoplay loop webkit-playsinline style="display:none">
-			<source src="repl_right.webm" type='video/webm;'>
+			<source src="repl_right_nu.webm" type='video/webm;'>
 		</video>
-		--->
 		<video id="video2" autoplay loop webkit-playsinline style="display:none">
 			<source src="maxresize.mp4" type='video/mp4;'>
 		</video>
